MGMIDN-1047: Improve UI - fix bug screen for schedule, and status when generate in plan information section
Merge in DA-NANG-INTERNSHIP/easy-tourney-fe from feature/MGMIDN-1047-improve-ui to master

Squashed commit of the following:

commit c105e365662ada380e245ad34c818faffaab47ec
Author: Huy Nguyễn Hữu <nguyenhuuhuya1@gmail.com>
Date:   Fri Jan 5 11:07:39 2024 +0700

    MGMIDN-1047: Improve UI - fix bug screen for schedule, and status when generate in plan information section

--- a/src/components/Schedule/PlanSection/PlanSection.module.css
+++ b/src/components/Schedule/PlanSection/PlanSection.module.css
@@ -5,7 +5,7 @@
 }
 
 .plan-title {
-  margin: 1rem !important;
+  padding: 1rem !important;
   font-weight: 500 !important;
   text-align: center;
 }
