--- a/src/templates/Template.module.css
+++ b/src/templates/Template.module.css
@@ -4,7 +4,7 @@
 
 .main-content {
   transition: all 0.5s ease;
-  width: 100vw;
+  width: 100%;
   padding: 1rem;
 }
 
